修复字体问题

--- a/admin-web/src/styles/index.scss
+++ b/admin-web/src/styles/index.scss
@@ -35,7 +35,7 @@
 }
 
 * {
-    font-family: PingFangSC-Medium;
+    font-family: Inter,-apple-system,BlinkMacSystemFont,PingFang SC,Hiragino Sans GB,noto sans,Microsoft YaHei,Helvetica Neue,Helvetica,Arial,sans-serif;
     margin: 0;
     padding: 0;
 }
